got 30 day chart working

--- a/front/views/homeView.html
+++ b/front/views/homeView.html
@@ -1,13 +1,15 @@
-<div id="headerWrap">
-    <h1 id="siteTitle">Rs-Interface</h1>
-</div>
-<div id="searchBar" class="col-md-12">
-    <form ng-submit="submit()">
-        <span class="searchBar">Enter an OldSchool RuneScape Item Id</span>
-        <input class="searchBar" type="text" ng-model="item.id" >
+<div ng-controller="MainCtrl">
+    <div id="headerWrap">
+        <h1 id="siteTitle">Rs-Interface</h1>
+    </div>
+    <div id="searchBar" class="col-md-12">
+        <form ng-submit="submit()">
+            <span class="searchBar">Enter an OldSchool RuneScape Item Id</span>
+            <input class="searchBar" type="text" ng-model="item.id" >
 
-    </form>
+        </form>
 
-    <div ng-if="submitted == true"  ng-include="'/views/searchView.html'"></div>
+        <div ng-if="submitted == true"  ng-include="'views/searchView.html'"></div>
 
+    </div>
 </div>
