--- a/front/views/searchView.html
+++ b/front/views/searchView.html
@@ -64,8 +64,8 @@
                 </tr>
             </table>
 
-            <div ng-controller="LineCtrl">
-                <canvas id="line" class="chart chart-line" chart-data="data" ></canvas>
+            <div ng-controller="MainCtrl">
+                <canvas id="line" class="chart chart-line" chart-data="dailyGraphArData" chart-labels="dailyGraphArLabels"></canvas>
             </div>
 
 
